🐛 Fix: 로그 추가 (버그 수정 중)